
2015-10-10 Ron Norman <rjn@inglenet.com>

	* common.c: added code to report additional environment settings

2015-10-06  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed bug #158 - fixed TEST-FORMATTED-DATETIME rejecting
	  October (month #10). Also fixed unreported bug where
	  TEST-FORMATTED-DATETIME rejected dates followed by whitespace.

2015-08-21  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: implemented LOWLIGHT.

2015-08-20  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: added detection of EC-SCREEN-LINE-NUMBER,
	  EC-SCREEN-STARTING-COLUMN and EC-SCREEN-ITEM-TRUNCATED.
	* screenio.c, common.h: refactored functions implementing ACCEPT and
	  DISPLAY.

2015-06-24  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: bug #140 - changed pow to int_pow to avoid rounding
	  errors. On MinGW, pow (10, 8) rounded to 9999999 instead of 10000000,
	  for example.

2015-06-22  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c: Add or enhance special keys to Extended ACCEPT.
          Insert, Tab, Shift-Tab, Backspace, Delete, Alt-Delete, End,
          Alt-End, Home, Alt-Home, Left-arrow, Alt-Left-arrow,
          Right-arrow, Alt-Right-arrow.

2015-06-21  Edward Hart <edward.dan.hart@gmail.com>

	* common.c: fixed segfault caught in updated SWITCH test by extending
	  cob_switch array by 1.

2015-05-18  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c: Fix WITH BLANK SCREEN to color the whole screen.
          And WITH BLANK LINE to color the whole line.

2015-05-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c: fr #65 added more switches "SWITCH-16" to "SWITCH-36"

2015-05-14  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cb_config_entry): remove redundant aliases !copy/(un)set/!anything
	* common.c: add ACUCOBOL configuration aliases LOGICAL_CANCELS
	  (= !COB_PHYSICAL_CANCEL) and STRIP_TRAILING_SPACES (= !COB_LS_FIXED)
